Resolves: tdf#102777 broadcast SC_TAB_INSERTED when inserting scenario

So ScViewData::maTabData gets an entry added which deleting the scenario
can remove again.

(cherry picked from commit 4c8059a3e140171399ac85ceb882d23bb458599d)

Change-Id: I166baeff5408ef67faef41364515a13b8d4610bb
Reviewed-on: https://gerrit.libreoffice.org/34943
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>